# ideapadconfigtool

./: README.md  meson.build
data/: ideapadconfigtool.appdata.xml.in  ideapadconfigtool.desktop.in  ideapadconfigtool.metainfo.xml
po/: POTFILES  com.github.KaltWulx.ideapadconfigtool.pot  en.po  es.po  untitled.pot
src/: Main.vala
src/controller/: BatteryConservative.vala  FnLock.vala  USBCharging.vala
src/model/: BatteryConservative.vala  FnLock.vala  USBCharging.vala
src/model/interfaces/: IdeaPadMode.vala
src/model/utils/: IdeaPadUtils.vala  Notification.vala
src/view/: UIMainIdeaPadConfigTool.vala  WidgetIdeaPadMode.vala
